--- a/public/login-keypack.html
+++ b/public/login-keypack.html
@@ -33,8 +33,19 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="card" style="max-width: 500px; margin: 2rem auto;">
+  <header class="header">
+    <div class="container">
+      <h1 class="logo"><a href="/" style="color: inherit; text-decoration: none;">Veritas Documents</a></h1>
+      <nav class="nav">
+        <a href="/search">Search</a>
+        <a href="/docs">Docs</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="main">
+    <div class="container">
+      <div class="card" style="max-width: 500px; margin: 2rem auto;">
       <div class="card-header">
         <h2 class="card-title">Login to Veritas Documents</h2>
         <p class="card-subtitle">Secure legal document storage with post-quantum cryptography</p>
@@ -87,8 +98,9 @@
 
       <!-- Loading/Error Messages -->
       <div id="message-box" style="margin-top: 1rem;"></div>
+      </div>
     </div>
-  </div>
+  </main>
 
   <script type="module">
     import * as VeritasCrypto from '/static/app.bundle.js';
